# OLDGava

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gvm_cp.html
gdk/: ITest.java  ITest2.java  ITest3.java  ITest4.java  JavaTest.java  Test.java  Test.txt  TestString.java  c.bat  command.bat  dump.bat
gdk/java/lang/: Object.java  String.java  StringBuilder.java
includes/: CMap.h  ClassHeap.h  ExecutionEngine.h  FilePathManager.h  Frame.h  JavaClass.h  NativeMethods.h  ObjectHeap.h  constants.h  opcodes.h  types.h
src/: ClassHeap.cpp  ExecutionEngine.cpp  FilePathManager.cpp  Frame.cpp  JavaClass.cpp  Main.cpp  NativeMethods.cpp  ObjectHeap.cpp  opcodes.cpp
