cmake_minimum_required(VERSION 2.8.9)
project (Gava)
file(GLOB source_files "src/*.cpp" "includes/*.h")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/dist) 
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/dist)
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/dist)
include_directories(includes)
add_executable(gava ${source_files}) 
target_link_libraries(gava)
